<resources>
    <string name="app_name">Fitness Application</string>
    <string name="record_weight">Record Weight</string>
    <string name="calorie_counter">Calorie Counter</string>
    <string name="personal_workout">Personal Workout</string>
    <string name="workouts">Workouts</string>
    <string name="chooseWorkouts">Choose Workout</string>
    <string name="workout_type">Workout Type</string>
    <string name="totalCals">Total Calories: xxxx</string>
    <string name="totalProtein">Total Protein: xxxx</string>
    <string name="totalCarbs">Total Carbs: xxxx</string>
    <string name="totalFats">Total Fats: xxxx</string>
    <string name="calsRemaining">Calories Remaining: xxxx</string>
    <string name="recordMeal">Record Your Meal</string>
    <string name="update_parameters">Update Parameters</string>
    <string name="workout_name">Workout Name</string>
    <string name="i">i</string>
    <string name="create_workout">Create Workout</string>
    <string name="selected_exercises">Selected exercises</string>
    <string name="choose_an_exercise">Choose an exercise</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="todaysDate">Today\'s Date</string>
    <string name="workout_name_here">Workout Name Here</string>
    <string name="blank_time">00:00</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="pause">PAUSE</string>
    <string name="blank_set_label">0/X</string>
    <string name="log_set">Log Set</string>
    <string name="exercise_name_here">Exercise Name Here</string>
    <string name="video_placeholder">Video Embedded Here</string>
    <string name="repsNamePlaceholder">REPS</string>
    <string name="repsNumPlaceholder">X-XX</string>
    <string name="kgs">kg</string>
    <string name="cms">cm</string>
    <string name="decimal">.</string>
    <string name="choose_date">Choose Date</string>
    <string name="record_weight_labelbutton">Record Weight</string>
    <string name="current_height">Current Height</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="weight_history">Weight History</string>
    <string name="begin_workout">Begin Workout</string>
    <string name="set_workout_parameters">Set Workout Parameters</string>
    <string name="workout_parameters">Workout Parameters</string>
    <string name="sets">sets</string>
    <string name="reps">reps</string>
    <string name="resume">Resume</string>
    <string name="enter_the_meals_breakdown">Enter the meal breakdown</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fats">Fats</string>
    <string name="record_meal">Record Meal</string>
    <string name="record_your_meal">Record Your Meal</string>
    <string name="daily_calorie_allowance">Daily Calorie Allowance</string>
    <string name="update">Update</string>
</resources>