<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/full_exercise_card"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardBackgroundColor="@color/background_grey">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:cardBackgroundColor="@color/background_light_grey"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">

            <TextView
                android:id="@+id/exerciseNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical"
                android:textAlignment="gravity"
                android:text="@string/exercise_name_here"
                android:fontFamily="@font/dm_sans"
                android:textStyle="italic"
                android:textSize="28sp"
                android:textColor="@color/text_yellow"/>

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/videoCard"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_below="@id/exerciseNameTextView"
                android:gravity="center_vertical|center_horizontal"
                android:textAlignment="gravity"
                android:src="@drawable/peter"
                />

<!--            <TextView-->
<!--                android:id="@+id/videoCard"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="100dp"-->
<!--                android:layout_below="@id/exerciseNameTextView"-->
<!--                android:text="@string/video_placeholder"-->
<!--                android:gravity="center_vertical|center_horizontal"-->
<!--                android:textAlignment="gravity"-->
<!--                android:textColor="@color/background_dark_grey"-->
<!--                android:background="@color/white"/>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_toEndOf="@id/videoCard"
                android:layout_below="@id/exerciseNameTextView">

                <TextView
                    android:id="@+id/repNumberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/repsNumPlaceholder"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/repNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_below="@id/repNumberTextView"
                    android:text="@string/repsNamePlaceholder"
                    android:fontFamily="@font/dm_sans"
                    android:gravity="center_vertical|center_horizontal"
                    android:textAlignment="gravity"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>