<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:padding="15dp"
    tools:context=".UpdateParametersActivity">
    <TextView
        android:id="@+id/UpdateParamsTextView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="gravity"
        android:elevation="10dp"
        android:text="Update Parameters"
        android:fontFamily="@font/dm_sans"
        android:textStyle="bold"
        android:shadowColor="@color/black"
        android:shadowRadius="15"
        android:shadowDx="5"
        android:shadowDy="5"
        android:textColor="@color/text_yellow"
        android:textSize="35sp"
        android:background="@drawable/header_banner"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DailyCalorieTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/UpdateParamsTextView"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/text_yellow"
        app:hintTextColor="@color/text_yellow"
        android:textColorHint="@color/text_yellow"
        android:outlineSpotShadowColor="@color/text_yellow"
        app:counterTextColor="@color/text_yellow"
        app:boxStrokeErrorColor="@color/stop_red"
        app:helperTextTextColor="@color/text_yellow"
        app:placeholderTextColor="@color/text_yellow"
        app:errorEnabled="true"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recordCaloriesTextInputField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:textColor="@color/text_yellow"
            android:inputType="textPersonName"
            android:hint="@string/daily_calorie_allowance"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/DailyCalorieTextLayout"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/text_yellow"
        app:hintTextColor="@color/text_yellow"
        android:textColorHint="@color/text_yellow"
        android:outlineSpotShadowColor="@color/text_yellow"
        app:counterTextColor="@color/text_yellow"
        app:boxStrokeErrorColor="@color/stop_red"
        app:helperTextTextColor="@color/text_yellow"
        app:placeholderTextColor="@color/text_yellow"
        app:errorEnabled="true"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/heightTextInputField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:textColor="@color/text_yellow"
            android:inputType="textPersonName"
            android:hint="@string/current_height"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/goalTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/heightTextLayout"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/text_yellow"
        app:hintTextColor="@color/text_yellow"
        android:textColorHint="@color/text_yellow"
        android:outlineSpotShadowColor="@color/text_yellow"
        app:counterTextColor="@color/text_yellow"
        app:boxStrokeErrorColor="@color/stop_red"
        app:helperTextTextColor="@color/text_yellow"
        app:placeholderTextColor="@color/text_yellow"
        app:errorEnabled="true"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/goalTextInputField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans"
            android:textColor="@color/text_yellow"
            android:inputType="textPersonName"
            android:hint="@string/goal_weight"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/recordYourMealButton"
        android:layout_below="@id/goalTextLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/update"
        android:textStyle="bold"
        android:backgroundTint="@color/text_yellow"
        android:textSize="20sp"
        android:textColor="@color/background_grey"
        />
</RelativeLayout>